--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=0.9.0
 author=TechnoPhys, CB, RM, JL
 maintainer=Technologie du genie physique <technophys@claurendeau.qc.ca>
 sentence=Permet de décoder les messages selon un format standard.
-paragraph=Cette bibliotheque permet de décoder les messages selon le format 'c a1 a2 a3 [...]' où c est une lettre représentant une commande données, suivis d'une liste d'arguments de taille et de type variable.
+paragraph=Cette bibliotheque permet de décoder les messages selon le format 'C a1 a2 a3 ...' où C est une lettre représentant une commande donnée, suivis d'une liste d'arguments de taille et de type variable.
 category=Data Processing
 url=technophys.claurendeau.qc.ca
 architectures=*
-includes=BoutonPin.h
+includes=Decodeur.h
