--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=TGP Decodeur
-version=0.9.0
+version=0.9.8
 author=TechnoPhys, CB, RM, JL
-maintainer=Technologie du genie physique <technophys@claurendeau.qc.ca>
+maintainer=Technologie du génie physique <technophys@claurendeau.qc.ca>
 sentence=Permet de décoder les messages selon un format standard.
 paragraph=Cette bibliotheque permet de décoder les messages selon le format 'C a1 a2 a3 ...' où C est une lettre représentant une commande donnée, suivis d'une liste d'arguments de taille et de type variable.
 category=Data Processing
-url=technophys.claurendeau.qc.ca
+url=http://technophys.claurendeau.qc.ca
 architectures=*
 includes=Decodeur.h
