Modification de la documentation

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=2.0
 author=TechnoPhys, CB, RM, JL, YH
 maintainer=Technologie du génie physique <technophys@claurendeau.qc.ca>
 sentence=Permet de décoder les messages provenant d'un objet de type Stream (tel que Serial), selon un format standard.
-paragraph=Cette bibliotheque permet de décoder les messages selon le format 'C a1 a2 a3 ...' où C est une lettre représentant une commande donnée, suivis d'une liste d'arguments de taille et de type variable.
+paragraph=Cette bibliotheque permet de décoder les messages selon le format 'C a1 a2 a3 ...' où C est une lettre (ou un mot) représentant une commande donnée, suivis d'une liste d'arguments de taille et de type variable.
 category=Data Processing
 url=https://github.com/TechnoPhysCAL/TGP_Decodeur
 architectures=*
